[project]
name = "simple-comments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pelican==4.11.0",
    "pytest==8.4.2",
    "pytest-cov==6.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["pelican"]
testpaths = ["pelican"]
python_files = ["test_*.py"]
addopts = """--cov=simple_comments
             --junitxml=test_results.xml
          """
